--- a/package.json
+++ b/package.json
@@ -22,28 +22,35 @@
     ],
     "types": "src/index.d.ts",
     "bugs": {
-        "url": "https://github.com/FiguredLimited/vue-mc/issues"
+        "url": "https://github.com/moiz2050/vue-mc/issues"
     },
-    "homepage": "https://github.com/FiguredLimited/vue-mc",
+    "homepage": "https://github.com/moiz2050/vue-mc",
     "repository": {
         "type": "git",
-        "url": "https://github.com/FiguredLimited/vue-mc.git"
+        "url": "https://github.com/moiz2050/vue-mc.git"
     },
-    "author": {
-        "name": "Rudi Theunissen",
-        "email": "rudi.theunissen@figured.com",
-        "url": "https://github.com/rtheunissen"
-    },
+    "authors": [
+        {
+            "name": "Rudi Theunissen",
+            "email": "rudi.theunissen@figured.com",
+            "url": "https://github.com/rtheunissen"
+        },
+        {
+            "name": "Mueez Sattar Khan",
+            "email": "msk@hejoscar.dk",
+            "url": "https://github.com/moiz2050"
+        }
+    ],
     "dependencies": {
         "axios": "0.19.0",
         "date-fns": "^2.0.0-beta.4",
         "lodash": "^4.17.15",
         "validator": "^10.9.0",
-        "vue": "^2.5.17"
+        "vue": "^3.2.47"
     },
     "devDependencies": {
         "@babel/core": "^7.1.6",
-        "@babel/preset-env": "^7.1.6",
+        "@babel/preset-env": "^7.20.2",
         "@babel/register": "^7.0.0",
         "@types/chai": "^4.1.6",
         "@types/lodash": "^4.14.145",
@@ -51,7 +58,7 @@
         "@types/moxios": "^0.4.8",
         "@types/node": "^10.12.0",
         "@types/validator": "^9.4.2",
-        "@typescript-eslint/eslint-plugin": "^1.3.0",
+        "@typescript-eslint/eslint-plugin": "^5.55.0",
         "@typescript-eslint/parser": "^1.3.0",
         "array-permutation": "^0.2.0",
         "babel-plugin-istanbul": "^5.1.0",
