--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "es6",
     "target": "es6",
     "sourceMap": true,
+    "noImplicitAny": false,
     "strict": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
